--- a/style.css
+++ b/style.css
@@ -1,87 +1,153 @@
 @import "vars.css";
-
+@font-face {
+    font-family: 'Open Sans';
+    src: url(OpenSans-VariableFont_wdth\,wght.ttf);
+}
 * {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    font-family: sans-serif;
+    font-family: 'Open Sans', sans-serif;
     scroll-behavior: smooth;
     text-decoration: none;
     color: black;
+}
+
+body {
+    background-color: lightgray;
 }
 
 a {
     text-decoration: underline;
 }
 
-nav {
-    background: #aa5042;
-    height: 80px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 1.2rem;
-    top: 0;
+@media screen and (max-width: 459px) {
+    
+    nav {
+        background: color(srgb-linear 0 1 0);
+        height: 80px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-wrap: wrap;
+        font-size: 1.2rem;
+        top: 0;
+    }
+    
+    nav > ul {
+        display: flex;
+        border: red 1px solid;
+        justify-content: space-between;
+        height: 80px;
+        width: 100%;
+        max-width: 1000px;
+        margin: 0 auto;
+        padding: 0 50px;
+        list-style: none;
+        color: white;
+    }
+    
+    .nav-item {
+        color: white;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 125px;
+        text-decoration: none;
+        height: 100%;
+        transition: all 0.3s ease;
+    }
+
+    pre {
+        display: none;
+    }
+    
 }
 
-nav > ul {
-    display: flex;
-    border: red 1px solid;
-    justify-content: space-between;
-    height: 80px;
-    width: 100%;
-    max-width: 1000px;
-    margin: 0 auto;
-    padding: 0 50px;
-    list-style: none;
-    color: white;
-}
 
-.nav-item {
-    color: white;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 125px;
-    text-decoration: none;
-    height: 100%;
-    transition: all 0.3s ease;
-}
-
-.nav-item a:hover {
-    transition: all 0.3s ease;
-    color: white;
+@media screen and (min-width: 460px) {
+    nav {
+        background: color-mix(
+            in hsl longer hue,
+            hsl(10 100% 50%),
+            hsl(60 100% 50%)
+          );
+        height: 80px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 1.2rem;
+        top: 0;
+    }
+    
+    nav > ul {
+        display: flex;
+        border: red 1px solid;
+        justify-content: space-between;
+        height: 80px;
+        width: 100%;
+        max-width: 1000px;
+        margin: 0 auto;
+        padding: 0 50px;
+        list-style: none;
+        color: white;
+    }
+    
+    .nav-item {
+        color: white;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 125px;
+        text-decoration: none;
+        height: 100%;
+        transition: all 0.3s ease;
+    }
+    
+    .nav-item a:hover {
+        transition: all 0.3s ease;
+        color: white;
+    }
 }
 
 .postcard {
     height: 40%;
     background-color: #488286;
-    display: grid;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap-reverse;
+    justify-content: space-evenly;
     padding: 5%;
     margin: 0 auto;
+    align-items: center;
 }
 
 #postcard-frame {
-    grid-area: 1 / 3 / 3 / 4;
-    max-width: 300px;
+    display: flexbox;
+    flex: 2;
+    max-width: 400px;
     width: 30vw;
     border-radius: 100px;
     overflow: hidden;
     justify-content: center;
     align-items: center;
+    object-position: center;
     margin: 20px;
 }
 
-.postcard-frame > img {
+#postcard-frame > img {
     display: block;
+    flex: 1;
     justify-content: center;
     align-self: center;
     width: 30vw;
     max-width: 440px;
+    object-position: 5% 5%;
+    object-fit: contain;
 }
 
 .hello {
-    grid-area: 1 / 1 / 3 / 3;
+    display: flexbox;
     margin: auto 2dvw;
 }
 
@@ -101,12 +167,22 @@ h2 {
 
 #work-experience-container {
     background-color: #242B44;
-    display: block;
     padding: 0px 0px 20px 0px;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    flex-direction: column;
+}
 
+#work-experience-container section {
+    display: flex;
+    width: 80dvw;
+    max-width: 700px;
+    flex-direction: column;
 }
 
 #work-experience-header {
+    text-align: center;
     color: whitesmoke;
     padding: 1rem 2rem 0rem 20px;
 }
@@ -121,6 +197,15 @@ h2 {
     background-color: #BFB48F;
 }
 
+body > section {
+    padding: 2rem;
+    display: block;
+    border: 2px solid grey;
+    border-radius: 20px;
+    padding: 20px 2dvw;
+    margin: 2dvw 2dvw 0dvw 2dvw;
+    background-color: #BFB48F;
+}
 .work-experience > h3 {
     font-size: 1.6rem;
     padding-bottom: 10px;
@@ -137,10 +222,50 @@ h2 {
 footer {
     background-color: gray;
     display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-direction: column-reverse;
 }
 
 aside {
     font-size: .8rem;
     padding: 0px 10px 0px 10px;
     border-left: 5px #aa5042 solid;
+}
+
+canvas {
+    background-color: white;
+}
+
+figure {
+    display: flexbox;
+    border: 2px white solid;
+    margin: 10px;
+    padding: 20px;
+    border-radius: 20px;
+    width: fit-content;
+    height: fit-content;
+}
+
+#photo-gallery {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-content: stretch;
+    align-items: baseline;
+    justify-content: flex-start;
+    background-color: #242B44;
+    height: max-content;
+    min-height: 80vh;
+}
+
+#photo-gallery figcaption {
+    color: white;
+}
+
+video {
+    border: 2px solid black;
+    padding: 20px;
+    background-color: grey;
+    border-radius: 20px;
 }
