--- a/style.css
+++ b/style.css
@@ -299,3 +299,13 @@ code {
     color: blue;
     font-family: 'Courier New', Courier, monospace
 }
+
+form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.req-star {
+    color: red;
+}
